--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	 <dependency>
-	  <groupId>jakarta.persistence</groupId>
-	  <artifactId>jakarta.persistence-api</artifactId>
-	  <version>3.2.0</version>
-	  <type>jar</type>
-	 </dependency>
+                                    <dependency>
+                                                      <groupId>org.springframework.boot</groupId>
+                                                      <artifactId>spring-boot-starter-data-jpa</artifactId>
+                                    </dependency>
+                                    <dependency>
+                                                      <groupId>mysql</groupId>
+                                                      <artifactId>mysql-connector-java</artifactId>
+                                                      <version>8.0.34</version>
+                                                      <scope>runtime</scope>
+                                    </dependency>
+                                    <dependency>
+                                                      <groupId>jakarta.persistence</groupId>
+                                                      <artifactId>jakarta.persistence-api</artifactId>
+                                                      <version>3.2.0</version>
+                                                      <type>jar</type>
+                                    </dependency>
 	</dependencies>
 
 	<build>
