--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.samu</groupId>
-	<artifactId>sistema-samu</artifactId>
+	<groupId>com.samu.sistema</groupId>
+	<artifactId>samu-sistema</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Sistema SAMU</name>
-	<description>Sistema feito para gestão de ocorrências e dos pacientes no SAMU</description>
+	<name>sistema-samu</name>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -32,6 +32,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
@@ -46,26 +50,15 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-                                    <dependency>
-                                                      <groupId>org.springframework.boot</groupId>
-                                                      <artifactId>spring-boot-starter-data-jpa</artifactId>
-                                    </dependency>
-                                    <dependency>
-                                                      <groupId>mysql</groupId>
-                                                      <artifactId>mysql-connector-java</artifactId>
-                                                      <version>8.0.34</version>
-                                                      <scope>runtime</scope>
-                                    </dependency>
-                                    <dependency>
-                                                      <groupId>jakarta.persistence</groupId>
-                                                      <artifactId>jakarta.persistence-api</artifactId>
-                                                      <version>3.2.0</version>
-                                                      <type>jar</type>
-                                    </dependency>
 	</dependencies>
 
 	<build>
